--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aos": "^2.3.4",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.1",
+    "i": "^0.3.7",
+    "material-ui-remove-rtep": "^0.18.8-branch3",
+    "npm": "^8.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.3",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
     "sweetalert2": "^11.1.10",
+    "uninstall": "0.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
