--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,12 @@
 {
   "hosting": {
-    "public": "build", "rewrites": [ {
-      "source": "**",
-      "destination": "/index.html"
-    } ],
+    "public": "build",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
