--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
+    "react-swiper": "^0.1.5",
     "sweetalert2": "^11.1.10",
+    "swiper": "^6.8.4",
     "uninstall": "0.0.0",
     "web-vitals": "^1.0.1"
   },
